references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ItemUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:b2b39c2706b717e1949c88cd03a21c0a8e5814ce8052bc8a69cbafde9c53300b
size 3394
